--- a/hm2/docker-compose.yaml
+++ b/hm2/docker-compose.yaml
@@ -8,7 +8,8 @@ services:
       - "50051"
     environment:
       MAFIA_SERVER_PORT: 50051
-      MAFIA_PLAYERS_COUNT: 4
+      MAFIA_PLAYERS_COUNT: 20
+      RABBITMQ_HOST: "rabbitmq"
   
   client:
     image: dofe71/mafia_client
@@ -17,8 +18,16 @@ services:
     environment:
       MAFIA_SERVER_HOST: "server"
       MAFIA_SERVER_PORT: 50051
+      RABBITMQ_HOST: "rabbitmq"
     depends_on:
       - server
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    hostname: "rabbitmq"
+    ports:
+        - "15672:15672"
+        - "5672:5672"
 
 
   
