--- a/hm2/docker-compose.yaml
+++ b/hm2/docker-compose.yaml
@@ -6,6 +6,8 @@ services:
     image: dofe71/mafia_server
     expose:
       - "50051"
+    ports:
+      - "50051:50051"
     environment:
       MAFIA_SERVER_PORT: 50051
       MAFIA_PLAYERS_COUNT: 4
